tests/algorithms/transpiler/FS/project_euler/problem_014/sol1.error
exit status 1
F# Compiler for F# 4.0 (Open Source Edition)
Freely distributed under the Apache 2.0 Open Source License

/workspace/mochi/tests/algorithms/transpiler/FS/project_euler/problem_014/sol1.fs(111,16): error FS0001: This expression was expected to have type
    int64    
but here has type
    int    
